lab6/main.output
Terminals unused in grammar

   DOT
   POI
   DEC
   OCT
   HEX
   BOOL
   STRUCT


State 0 conflicts: 1 shift/reduce
State 20 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 151 conflicts: 1 shift/reduce
State 152 conflicts: 1 shift/reduce
State 154 conflicts: 1 shift/reduce
State 159 conflicts: 1 shift/reduce
State 169 conflicts: 1 shift/reduce
State 170 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statements

    2 statements: statement
    3           | statements statement

    4 statement: SEMICOLON
    5          | declaration SEMICOLON
    6          | assignment SEMICOLON
    7          | jump SEMICOLON
    8          | loop
    9          | control
   10          | function

   11 function: functionDecl SEMICOLON
   12         | functionCall SEMICOLON
   13         | functionDefi

   14 functionDefi: type MAIN LBRACE RBRACE LPAREN statements RPAREN

   15 functionDecl: type ID LBRACE RBRACE

   16 functionCall: SCANF LBRACE STRING scanfIdlist RBRACE
   17             | PRINTF LBRACE STRING RBRACE
   18             | PRINTF LBRACE STRING printfIdlist RBRACE
   19             | ID LBRACE paramList RBRACE

   20 paramList: paramList COMMA expr
   21          | expr
   22          | %empty

   23 scanfIdlist: scanfIdlist COMMA REF ID
   24            | COMMA REF ID

   25 printfIdlist: printfIdlist COMMA ID
   26             | COMMA ID

   27 idlist: idlist COMMA ID ASG expr
   28       | idlist COMMA ID
   29       | ID ASG expr
   30       | ID

   31 declaration: type idlist
   32            | CONST type idlist

   33 type: T_BOOL
   34     | T_INT
   35     | T_CHAR
   36     | T_STRING
   37     | T_VOID

   38 loop: FOR LBRACE forcon RBRACE LPAREN statements RPAREN
   39     | WHILE LBRACE expr RBRACE LPAREN statements RPAREN

   40 forcon: declaration SEMICOLON expr SEMICOLON assignment
   41       | assignment SEMICOLON expr SEMICOLON assignment

   42 control: IF LBRACE expr RBRACE LPAREN statements RPAREN
   43        | IF LBRACE expr RBRACE LPAREN statements RPAREN ELSE LPAREN statements RPAREN

   44 jump: BREAK
   45     | CONTINUE
   46     | RETURN expr
   47     | RETURN

   48 assignment: %empty
   49           | ID ASG expr
   50           | ID ADDASG expr
   51           | ID MINASG expr
   52           | ID MULASG expr
   53           | ID DIVASG expr
   54           | ID MODASG expr
   55           | ADDASGO ID
   56           | MINASGO ID
   57           | ID ADDASGO
   58           | ID MINASGO

   59 expr: expr ADD expr
   60     | expr MIN expr
   61     | expr MUL expr
   62     | expr DIV expr
   63     | expr MOD expr
   64     | expr AND expr
   65     | expr OR expr
   66     | expr GT expr
   67     | expr GTQ expr
   68     | expr LT expr
   69     | expr LTQ expr
   70     | expr NEQ expr
   71     | expr EQU expr
   72     | NOT expr
   73     | ADD expr
   74     | MIN expr
   75     | REF expr
   76     | ID
   77     | INTEGER
   78     | CHAR
   79     | STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
ASG (258) 27 29 49
ADDASG (259) 50
MINASG (260) 51
MULASG (261) 52
DIVASG (262) 53
MODASG (263) 54
ADDASGO (264) 55 57
MINASGO (265) 56 58
DOT (266)
REF (267) 23 24 75
POI (268)
NOT (269) 72
ADD (270) 59 73
MIN (271) 60 74
MUL (272) 61
DIV (273) 62
MOD (274) 63
EQU (275) 71
GT (276) 66
LT (277) 68
GTQ (278) 67
LTQ (279) 69
NEQ (280) 70
AND (281) 64
OR (282) 65
LBRACE (283) 14 15 16 17 18 19 38 39 42 43
RBRACE (284) 14 15 16 17 18 19 38 39 42 43
LPAREN (285) 14 38 39 42 43
RPAREN (286) 14 38 39 42 43
ID (287) 15 19 23 24 25 26 27 28 29 30 49 50 51 52 53 54 55 56 57 58
    76
INTEGER (288) 77
MAIN (289) 14
DEC (290)
OCT (291)
HEX (292)
CHAR (293) 78
BOOL (294)
STRING (295) 16 17 18 79
T_BOOL (296) 33
T_INT (297) 34
T_CHAR (298) 35
T_STRING (299) 36
T_VOID (300) 37
CONST (301) 32
STRUCT (302)
IF (303) 42 43
ELSE (304) 43
WHILE (305) 39
FOR (306) 38
RETURN (307) 46 47
CONTINUE (308) 45
BREAK (309) 44
PRINTF (310) 17 18
SCANF (311) 16
SEMICOLON (312) 4 5 6 7 11 12 40 41
COMMA (313) 20 23 24 25 26 27 28


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
program (60)
    on left: 1, on right: 0
statements (61)
    on left: 2 3, on right: 1 3 14 38 39 42 43
statement (62)
    on left: 4 5 6 7 8 9 10, on right: 2 3
function (63)
    on left: 11 12 13, on right: 10
functionDefi (64)
    on left: 14, on right: 13
functionDecl (65)
    on left: 15, on right: 11
functionCall (66)
    on left: 16 17 18 19, on right: 12
paramList (67)
    on left: 20 21 22, on right: 19 20
scanfIdlist (68)
    on left: 23 24, on right: 16 23
printfIdlist (69)
    on left: 25 26, on right: 18 25
idlist (70)
    on left: 27 28 29 30, on right: 27 28 31 32
declaration (71)
    on left: 31 32, on right: 5 40
type (72)
    on left: 33 34 35 36 37, on right: 14 15 31 32
loop (73)
    on left: 38 39, on right: 8
forcon (74)
    on left: 40 41, on right: 38
control (75)
    on left: 42 43, on right: 9
jump (76)
    on left: 44 45 46 47, on right: 7
assignment (77)
    on left: 48 49 50 51 52 53 54 55 56 57 58, on right: 6 40 41
expr (78)
    on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
    77 78 79, on right: 20 21 27 29 39 40 41 42 43 46 49 50 51 52 53
    54 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75


State 0

    0 $accept: . program $end

    ADDASGO    shift, and go to state 1
    MINASGO    shift, and go to state 2
    ID         shift, and go to state 3
    T_BOOL     shift, and go to state 4
    T_INT      shift, and go to state 5
    T_CHAR     shift, and go to state 6
    T_STRING   shift, and go to state 7
    T_VOID     shift, and go to state 8
    CONST      shift, and go to state 9
    IF         shift, and go to state 10
    WHILE      shift, and go to state 11
    FOR        shift, and go to state 12
    RETURN     shift, and go to state 13
    CONTINUE   shift, and go to state 14
    BREAK      shift, and go to state 15
    PRINTF     shift, and go to state 16
    SCANF      shift, and go to state 17
    SEMICOLON  shift, and go to state 18

    SEMICOLON  [reduce using rule 48 (assignment)]

    program       go to state 19
    statements    go to state 20
    statement     go to state 21
    function      go to state 22
    functionDefi  go to state 23
    functionDecl  go to state 24
    functionCall  go to state 25
    declaration   go to state 26
    type          go to state 27
    loop          go to state 28
    control       go to state 29
    jump          go to state 30
    assignment    go to state 31


State 1

   55 assignment: ADDASGO . ID

    ID  shift, and go to state 32


State 2

   56 assignment: MINASGO . ID

    ID  shift, and go to state 33


State 3

   19 functionCall: ID . LBRACE paramList RBRACE
   49 assignment: ID . ASG expr
   50           | ID . ADDASG expr
   51           | ID . MINASG expr
   52           | ID . MULASG expr
   53           | ID . DIVASG expr
   54           | ID . MODASG expr
   57           | ID . ADDASGO
   58           | ID . MINASGO

    ASG      shift, and go to state 34
    ADDASG   shift, and go to state 35
    MINASG   shift, and go to state 36
    MULASG   shift, and go to state 37
    DIVASG   shift, and go to state 38
    MODASG   shift, and go to state 39
    ADDASGO  shift, and go to state 40
    MINASGO  shift, and go to state 41
    LBRACE   shift, and go to state 42


State 4

   33 type: T_BOOL .

    $default  reduce using rule 33 (type)


State 5

   34 type: T_INT .

    $default  reduce using rule 34 (type)


State 6

   35 type: T_CHAR .

    $default  reduce using rule 35 (type)


State 7

   36 type: T_STRING .

    $default  reduce using rule 36 (type)


State 8

   37 type: T_VOID .

    $default  reduce using rule 37 (type)


State 9

   32 declaration: CONST . type idlist

    T_BOOL    shift, and go to state 4
    T_INT     shift, and go to state 5
    T_CHAR    shift, and go to state 6
    T_STRING  shift, and go to state 7
    T_VOID    shift, and go to state 8

    type  go to state 43


State 10

   42 control: IF . LBRACE expr RBRACE LPAREN statements RPAREN
   43        | IF . LBRACE expr RBRACE LPAREN statements RPAREN ELSE LPAREN statements RPAREN

    LBRACE  shift, and go to state 44


State 11

   39 loop: WHILE . LBRACE expr RBRACE LPAREN statements RPAREN

    LBRACE  shift, and go to state 45


State 12

   38 loop: FOR . LBRACE forcon RBRACE LPAREN statements RPAREN

    LBRACE  shift, and go to state 46


State 13

   46 jump: RETURN . expr
   47     | RETURN .

    REF      shift, and go to state 47
    NOT      shift, and go to state 48
    ADD      shift, and go to state 49
    MIN      shift, and go to state 50
    ID       shift, and go to state 51
    INTEGER  shift, and go to state 52
    CHAR     shift, and go to state 53
    STRING   shift, and go to state 54

    $default  reduce using rule 47 (jump)

    expr  go to state 55


State 14

   45 jump: CONTINUE .

    $default  reduce using rule 45 (jump)


State 15

   44 jump: BREAK .

    $default  reduce using rule 44 (jump)


State 16

   17 functionCall: PRINTF . LBRACE STRING RBRACE
   18             | PRINTF . LBRACE STRING printfIdlist RBRACE

    LBRACE  shift, and go to state 56


State 17

   16 functionCall: SCANF . LBRACE STRING scanfIdlist RBRACE

    LBRACE  shift, and go to state 57


State 18

    4 statement: SEMICOLON .

    $default  reduce using rule 4 (statement)


State 19

    0 $accept: program . $end

    $end  shift, and go to state 58


State 20

    1 program: statements .
    3 statements: statements . statement

    ADDASGO    shift, and go to state 1
    MINASGO    shift, and go to state 2
    ID         shift, and go to state 3
    T_BOOL     shift, and go to state 4
    T_INT      shift, and go to state 5
    T_CHAR     shift, and go to state 6
    T_STRING   shift, and go to state 7
    T_VOID     shift, and go to state 8
    CONST      shift, and go to state 9
    IF         shift, and go to state 10
    WHILE      shift, and go to state 11
    FOR        shift, and go to state 12
    RETURN     shift, and go to state 13
    CONTINUE   shift, and go to state 14
    BREAK      shift, and go to state 15
    PRINTF     shift, and go to state 16
    SCANF      shift, and go to state 17
    SEMICOLON  shift, and go to state 18

    SEMICOLON  [reduce using rule 48 (assignment)]
    $default   reduce using rule 1 (program)

    statement     go to state 59
    function      go to state 22
    functionDefi  go to state 23
    functionDecl  go to state 24
    functionCall  go to state 25
    declaration   go to state 26
    type          go to state 27
    loop          go to state 28
    control       go to state 29
    jump          go to state 30
    assignment    go to state 31


State 21

    2 statements: statement .

    $default  reduce using rule 2 (statements)


State 22

   10 statement: function .

    $default  reduce using rule 10 (statement)


State 23

   13 function: functionDefi .

    $default  reduce using rule 13 (function)


State 24

   11 function: functionDecl . SEMICOLON

    SEMICOLON  shift, and go to state 60


State 25

   12 function: functionCall . SEMICOLON

    SEMICOLON  shift, and go to state 61


State 26

    5 statement: declaration . SEMICOLON

    SEMICOLON  shift, and go to state 62


State 27

   14 functionDefi: type . MAIN LBRACE RBRACE LPAREN statements RPAREN
   15 functionDecl: type . ID LBRACE RBRACE
   31 declaration: type . idlist

    ID    shift, and go to state 63
    MAIN  shift, and go to state 64

    idlist  go to state 65


State 28

    8 statement: loop .

    $default  reduce using rule 8 (statement)


State 29

    9 statement: control .

    $default  reduce using rule 9 (statement)


State 30

    7 statement: jump . SEMICOLON

    SEMICOLON  shift, and go to state 66


State 31

    6 statement: assignment . SEMICOLON

    SEMICOLON  shift, and go to state 67


State 32

   55 assignment: ADDASGO ID .

    $default  reduce using rule 55 (assignment)


State 33

   56 assignment: MINASGO ID .

    $default  reduce using rule 56 (assignment)


State 34

   49 assignment: ID ASG . expr

    REF      shift, and go to state 47
    NOT      shift, and go to state 48
    ADD      shift, and go to state 49
    MIN      shift, and go to state 50
    ID       shift, and go to state 51
    INTEGER  shift, and go to state 52
    CHAR     shift, and go to state 53
    STRING   shift, and go to state 54

    expr  go to state 68


State 35

   50 assignment: ID ADDASG . expr

    REF      shift, and go to state 47
    NOT      shift, and go to state 48
    ADD      shift, and go to state 49
    MIN      shift, and go to state 50
    ID       shift, and go to state 51
    INTEGER  shift, and go to state 52
    CHAR     shift, and go to state 53
    STRING   shift, and go to state 54

    expr  go to state 69


State 36

   51 assignment: ID MINASG . expr

    REF      shift, and go to state 47
    NOT      shift, and go to state 48
    ADD      shift, and go to state 49
    MIN      shift, and go to state 50
    ID       shift, and go to state 51
    INTEGER  shift, and go to state 52
    CHAR     shift, and go to state 53
    STRING   shift, and go to state 54

    expr  go to state 70


State 37

   52 assignment: ID MULASG . expr

    REF      shift, and go to state 47
    NOT      shift, and go to state 48
    ADD      shift, and go to state 49
    MIN      shift, and go to state 50
    ID       shift, and go to state 51
    INTEGER  shift, and go to state 52
    CHAR     shift, and go to state 53
    STRING   shift, and go to state 54

    expr  go to state 71


State 38

   53 assignment: ID DIVASG . expr

    REF      shift, and go to state 47
    NOT      shift, and go to state 48
    ADD      shift, and go to state 49
    MIN      shift, and go to state 50
    ID       shift, and go to state 51
    INTEGER  shift, and go to state 52
    CHAR     shift, and go to state 53
    STRING   shift, and go to state 54

    expr  go to state 72


State 39

   54 assignment: ID MODASG . expr

    REF      shift, and go to state 47
    NOT      shift, and go to state 48
    ADD      shift, and go to state 49
    MIN      shift, and go to state 50
    ID       shift, and go to state 51
    INTEGER  shift, and go to state 52
    CHAR     shift, and go to state 53
    STRING   shift, and go to state 54

    expr  go to state 73


State 40

   57 assignment: ID ADDASGO .

    $default  reduce using rule 57 (assignment)


State 41

   58 assignment: ID MINASGO .

    $default  reduce using rule 58 (assignment)


State 42

   19 functionCall: ID LBRACE . paramList RBRACE

    REF      shift, and go to state 47
    NOT      shift, and go to state 48
    ADD      shift, and go to state 49
    MIN      shift, and go to state 50
    ID       shift, and go to state 51
    INTEGER  shift, and go to state 52
    CHAR     shift, and go to state 53
    STRING   shift, and go to state 54

    $default  reduce using rule 22 (paramList)

    paramList  go to state 74
    expr       go to state 75


State 43

   32 declaration: CONST type . idlist

    ID  shift, and go to state 76

    idlist  go to state 77


State 44

   42 control: IF LBRACE . expr RBRACE LPAREN statements RPAREN
   43        | IF LBRACE . expr RBRACE LPAREN statements RPAREN ELSE LPAREN statements RPAREN

    REF      shift, and go to state 47
    NOT      shift, and go to state 48
    ADD      shift, and go to state 49
    MIN      shift, and go to state 50
    ID       shift, and go to state 51
    INTEGER  shift, and go to state 52
    CHAR     shift, and go to state 53
    STRING   shift, and go to state 54

    expr  go to state 78


State 45

   39 loop: WHILE LBRACE . expr RBRACE LPAREN statements RPAREN

    REF      shift, and go to state 47
    NOT      shift, and go to state 48
    ADD      shift, and go to state 49
    MIN      shift, and go to state 50
    ID       shift, and go to state 51
    INTEGER  shift, and go to state 52
    CHAR     shift, and go to state 53
    STRING   shift, and go to state 54

    expr  go to state 79


State 46

   38 loop: FOR LBRACE . forcon RBRACE LPAREN statements RPAREN

    ADDASGO   shift, and go to state 1
    MINASGO   shift, and go to state 2
    ID        shift, and go to state 80
    T_BOOL    shift, and go to state 4
    T_INT     shift, and go to state 5
    T_CHAR    shift, and go to state 6
    T_STRING  shift, and go to state 7
    T_VOID    shift, and go to state 8
    CONST     shift, and go to state 9

    $default  reduce using rule 48 (assignment)

    declaration  go to state 81
    type         go to state 82
    forcon       go to state 83
    assignment   go to state 84


State 47

   75 expr: REF . expr

    REF      shift, and go to state 47
    NOT      shift, and go to state 48
    ADD      shift, and go to state 49
    MIN      shift, and go to state 50
    ID       shift, and go to state 51
    INTEGER  shift, and go to state 52
    CHAR     shift, and go to state 53
    STRING   shift, and go to state 54

    expr  go to state 85


State 48

   72 expr: NOT . expr

    REF      shift, and go to state 47
    NOT      shift, and go to state 48
    ADD      shift, and go to state 49
    MIN      shift, and go to state 50
    ID       shift, and go to state 51
    INTEGER  shift, and go to state 52
    CHAR     shift, and go to state 53
    STRING   shift, and go to state 54

    expr  go to state 86


State 49

   73 expr: ADD . expr

    REF      shift, and go to state 47
    NOT      shift, and go to state 48
    ADD      shift, and go to state 49
    MIN      shift, and go to state 50
    ID       shift, and go to state 51
    INTEGER  shift, and go to state 52
    CHAR     shift, and go to state 53
    STRING   shift, and go to state 54

    expr  go to state 87


State 50

   74 expr: MIN . expr

    REF      shift, and go to state 47
    NOT      shift, and go to state 48
    ADD      shift, and go to state 49
    MIN      shift, and go to state 50
    ID       shift, and go to state 51
    INTEGER  shift, and go to state 52
    CHAR     shift, and go to state 53
    STRING   shift, and go to state 54

    expr  go to state 88


State 51

   76 expr: ID .

    $default  reduce using rule 76 (expr)


State 52

   77 expr: INTEGER .

    $default  reduce using rule 77 (expr)


State 53

   78 expr: CHAR .

    $default  reduce using rule 78 (expr)


State 54

   79 expr: STRING .

    $default  reduce using rule 79 (expr)


State 55

   46 jump: RETURN expr .
   59 expr: expr . ADD expr
   60     | expr . MIN expr
   61     | expr . MUL expr
   62     | expr . DIV expr
   63     | expr . MOD expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . GT expr
   67     | expr . GTQ expr
   68     | expr . LT expr
   69     | expr . LTQ expr
   70     | expr . NEQ expr
   71     | expr . EQU expr

    ADD  shift, and go to state 89
    MIN  shift, and go to state 90
    MUL  shift, and go to state 91
    DIV  shift, and go to state 92
    MOD  shift, and go to state 93
    EQU  shift, and go to state 94
    GT   shift, and go to state 95
    LT   shift, and go to state 96
    GTQ  shift, and go to state 97
    LTQ  shift, and go to state 98
    NEQ  shift, and go to state 99
    AND  shift, and go to state 100
    OR   shift, and go to state 101

    $default  reduce using rule 46 (jump)


State 56

   17 functionCall: PRINTF LBRACE . STRING RBRACE
   18             | PRINTF LBRACE . STRING printfIdlist RBRACE

    STRING  shift, and go to state 102


State 57

   16 functionCall: SCANF LBRACE . STRING scanfIdlist RBRACE

    STRING  shift, and go to state 103


State 58

    0 $accept: program $end .

    $default  accept


State 59

    3 statements: statements statement .

    $default  reduce using rule 3 (statements)


State 60

   11 function: functionDecl SEMICOLON .

    $default  reduce using rule 11 (function)


State 61

   12 function: functionCall SEMICOLON .

    $default  reduce using rule 12 (function)


State 62

    5 statement: declaration SEMICOLON .

    $default  reduce using rule 5 (statement)


State 63

   15 functionDecl: type ID . LBRACE RBRACE
   29 idlist: ID . ASG expr
   30       | ID .

    ASG     shift, and go to state 104
    LBRACE  shift, and go to state 105

    $default  reduce using rule 30 (idlist)


State 64

   14 functionDefi: type MAIN . LBRACE RBRACE LPAREN statements RPAREN

    LBRACE  shift, and go to state 106


State 65

   27 idlist: idlist . COMMA ID ASG expr
   28       | idlist . COMMA ID
   31 declaration: type idlist .

    COMMA  shift, and go to state 107

    $default  reduce using rule 31 (declaration)


State 66

    7 statement: jump SEMICOLON .

    $default  reduce using rule 7 (statement)


State 67

    6 statement: assignment SEMICOLON .

    $default  reduce using rule 6 (statement)


State 68

   49 assignment: ID ASG expr .
   59 expr: expr . ADD expr
   60     | expr . MIN expr
   61     | expr . MUL expr
   62     | expr . DIV expr
   63     | expr . MOD expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . GT expr
   67     | expr . GTQ expr
   68     | expr . LT expr
   69     | expr . LTQ expr
   70     | expr . NEQ expr
   71     | expr . EQU expr

    ADD  shift, and go to state 89
    MIN  shift, and go to state 90
    MUL  shift, and go to state 91
    DIV  shift, and go to state 92
    MOD  shift, and go to state 93
    EQU  shift, and go to state 94
    GT   shift, and go to state 95
    LT   shift, and go to state 96
    GTQ  shift, and go to state 97
    LTQ  shift, and go to state 98
    NEQ  shift, and go to state 99
    AND  shift, and go to state 100
    OR   shift, and go to state 101

    $default  reduce using rule 49 (assignment)


State 69

   50 assignment: ID ADDASG expr .
   59 expr: expr . ADD expr
   60     | expr . MIN expr
   61     | expr . MUL expr
   62     | expr . DIV expr
   63     | expr . MOD expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . GT expr
   67     | expr . GTQ expr
   68     | expr . LT expr
   69     | expr . LTQ expr
   70     | expr . NEQ expr
   71     | expr . EQU expr

    ADD  shift, and go to state 89
    MIN  shift, and go to state 90
    MUL  shift, and go to state 91
    DIV  shift, and go to state 92
    MOD  shift, and go to state 93
    EQU  shift, and go to state 94
    GT   shift, and go to state 95
    LT   shift, and go to state 96
    GTQ  shift, and go to state 97
    LTQ  shift, and go to state 98
    NEQ  shift, and go to state 99
    AND  shift, and go to state 100
    OR   shift, and go to state 101

    $default  reduce using rule 50 (assignment)


State 70

   51 assignment: ID MINASG expr .
   59 expr: expr . ADD expr
   60     | expr . MIN expr
   61     | expr . MUL expr
   62     | expr . DIV expr
   63     | expr . MOD expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . GT expr
   67     | expr . GTQ expr
   68     | expr . LT expr
   69     | expr . LTQ expr
   70     | expr . NEQ expr
   71     | expr . EQU expr

    ADD  shift, and go to state 89
    MIN  shift, and go to state 90
    MUL  shift, and go to state 91
    DIV  shift, and go to state 92
    MOD  shift, and go to state 93
    EQU  shift, and go to state 94
    GT   shift, and go to state 95
    LT   shift, and go to state 96
    GTQ  shift, and go to state 97
    LTQ  shift, and go to state 98
    NEQ  shift, and go to state 99
    AND  shift, and go to state 100
    OR   shift, and go to state 101

    $default  reduce using rule 51 (assignment)


State 71

   52 assignment: ID MULASG expr .
   59 expr: expr . ADD expr
   60     | expr . MIN expr
   61     | expr . MUL expr
   62     | expr . DIV expr
   63     | expr . MOD expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . GT expr
   67     | expr . GTQ expr
   68     | expr . LT expr
   69     | expr . LTQ expr
   70     | expr . NEQ expr
   71     | expr . EQU expr

    ADD  shift, and go to state 89
    MIN  shift, and go to state 90
    MUL  shift, and go to state 91
    DIV  shift, and go to state 92
    MOD  shift, and go to state 93
    EQU  shift, and go to state 94
    GT   shift, and go to state 95
    LT   shift, and go to state 96
    GTQ  shift, and go to state 97
    LTQ  shift, and go to state 98
    NEQ  shift, and go to state 99
    AND  shift, and go to state 100
    OR   shift, and go to state 101

    $default  reduce using rule 52 (assignment)


State 72

   53 assignment: ID DIVASG expr .
   59 expr: expr . ADD expr
   60     | expr . MIN expr
   61     | expr . MUL expr
   62     | expr . DIV expr
   63     | expr . MOD expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . GT expr
   67     | expr . GTQ expr
   68     | expr . LT expr
   69     | expr . LTQ expr
   70     | expr . NEQ expr
   71     | expr . EQU expr

    ADD  shift, and go to state 89
    MIN  shift, and go to state 90
    MUL  shift, and go to state 91
    DIV  shift, and go to state 92
    MOD  shift, and go to state 93
    EQU  shift, and go to state 94
    GT   shift, and go to state 95
    LT   shift, and go to state 96
    GTQ  shift, and go to state 97
    LTQ  shift, and go to state 98
    NEQ  shift, and go to state 99
    AND  shift, and go to state 100
    OR   shift, and go to state 101

    $default  reduce using rule 53 (assignment)


State 73

   54 assignment: ID MODASG expr .
   59 expr: expr . ADD expr
   60     | expr . MIN expr
   61     | expr . MUL expr
   62     | expr . DIV expr
   63     | expr . MOD expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . GT expr
   67     | expr . GTQ expr
   68     | expr . LT expr
   69     | expr . LTQ expr
   70     | expr . NEQ expr
   71     | expr . EQU expr

    ADD  shift, and go to state 89
    MIN  shift, and go to state 90
    MUL  shift, and go to state 91
    DIV  shift, and go to state 92
    MOD  shift, and go to state 93
    EQU  shift, and go to state 94
    GT   shift, and go to state 95
    LT   shift, and go to state 96
    GTQ  shift, and go to state 97
    LTQ  shift, and go to state 98
    NEQ  shift, and go to state 99
    AND  shift, and go to state 100
    OR   shift, and go to state 101

    $default  reduce using rule 54 (assignment)


State 74

   19 functionCall: ID LBRACE paramList . RBRACE
   20 paramList: paramList . COMMA expr

    RBRACE  shift, and go to state 108
    COMMA   shift, and go to state 109


State 75

   21 paramList: expr .
   59 expr: expr . ADD expr
   60     | expr . MIN expr
   61     | expr . MUL expr
   62     | expr . DIV expr
   63     | expr . MOD expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . GT expr
   67     | expr . GTQ expr
   68     | expr . LT expr
   69     | expr . LTQ expr
   70     | expr . NEQ expr
   71     | expr . EQU expr

    ADD  shift, and go to state 89
    MIN  shift, and go to state 90
    MUL  shift, and go to state 91
    DIV  shift, and go to state 92
    MOD  shift, and go to state 93
    EQU  shift, and go to state 94
    GT   shift, and go to state 95
    LT   shift, and go to state 96
    GTQ  shift, and go to state 97
    LTQ  shift, and go to state 98
    NEQ  shift, and go to state 99
    AND  shift, and go to state 100
    OR   shift, and go to state 101

    $default  reduce using rule 21 (paramList)


State 76

   29 idlist: ID . ASG expr
   30       | ID .

    ASG  shift, and go to state 104

    $default  reduce using rule 30 (idlist)


State 77

   27 idlist: idlist . COMMA ID ASG expr
   28       | idlist . COMMA ID
   32 declaration: CONST type idlist .

    COMMA  shift, and go to state 107

    $default  reduce using rule 32 (declaration)


State 78

   42 control: IF LBRACE expr . RBRACE LPAREN statements RPAREN
   43        | IF LBRACE expr . RBRACE LPAREN statements RPAREN ELSE LPAREN statements RPAREN
   59 expr: expr . ADD expr
   60     | expr . MIN expr
   61     | expr . MUL expr
   62     | expr . DIV expr
   63     | expr . MOD expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . GT expr
   67     | expr . GTQ expr
   68     | expr . LT expr
   69     | expr . LTQ expr
   70     | expr . NEQ expr
   71     | expr . EQU expr

    ADD     shift, and go to state 89
    MIN     shift, and go to state 90
    MUL     shift, and go to state 91
    DIV     shift, and go to state 92
    MOD     shift, and go to state 93
    EQU     shift, and go to state 94
    GT      shift, and go to state 95
    LT      shift, and go to state 96
    GTQ     shift, and go to state 97
    LTQ     shift, and go to state 98
    NEQ     shift, and go to state 99
    AND     shift, and go to state 100
    OR      shift, and go to state 101
    RBRACE  shift, and go to state 110


State 79

   39 loop: WHILE LBRACE expr . RBRACE LPAREN statements RPAREN
   59 expr: expr . ADD expr
   60     | expr . MIN expr
   61     | expr . MUL expr
   62     | expr . DIV expr
   63     | expr . MOD expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . GT expr
   67     | expr . GTQ expr
   68     | expr . LT expr
   69     | expr . LTQ expr
   70     | expr . NEQ expr
   71     | expr . EQU expr

    ADD     shift, and go to state 89
    MIN     shift, and go to state 90
    MUL     shift, and go to state 91
    DIV     shift, and go to state 92
    MOD     shift, and go to state 93
    EQU     shift, and go to state 94
    GT      shift, and go to state 95
    LT      shift, and go to state 96
    GTQ     shift, and go to state 97
    LTQ     shift, and go to state 98
    NEQ     shift, and go to state 99
    AND     shift, and go to state 100
    OR      shift, and go to state 101
    RBRACE  shift, and go to state 111


State 80

   49 assignment: ID . ASG expr
   50           | ID . ADDASG expr
   51           | ID . MINASG expr
   52           | ID . MULASG expr
   53           | ID . DIVASG expr
   54           | ID . MODASG expr
   57           | ID . ADDASGO
   58           | ID . MINASGO

    ASG      shift, and go to state 34
    ADDASG   shift, and go to state 35
    MINASG   shift, and go to state 36
    MULASG   shift, and go to state 37
    DIVASG   shift, and go to state 38
    MODASG   shift, and go to state 39
    ADDASGO  shift, and go to state 40
    MINASGO  shift, and go to state 41


State 81

   40 forcon: declaration . SEMICOLON expr SEMICOLON assignment

    SEMICOLON  shift, and go to state 112


State 82

   31 declaration: type . idlist

    ID  shift, and go to state 76

    idlist  go to state 65


State 83

   38 loop: FOR LBRACE forcon . RBRACE LPAREN statements RPAREN

    RBRACE  shift, and go to state 113


State 84

   41 forcon: assignment . SEMICOLON expr SEMICOLON assignment

    SEMICOLON  shift, and go to state 114


State 85

   59 expr: expr . ADD expr
   60     | expr . MIN expr
   61     | expr . MUL expr
   62     | expr . DIV expr
   63     | expr . MOD expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . GT expr
   67     | expr . GTQ expr
   68     | expr . LT expr
   69     | expr . LTQ expr
   70     | expr . NEQ expr
   71     | expr . EQU expr
   75     | REF expr .

    $default  reduce using rule 75 (expr)


State 86

   59 expr: expr . ADD expr
   60     | expr . MIN expr
   61     | expr . MUL expr
   62     | expr . DIV expr
   63     | expr . MOD expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . GT expr
   67     | expr . GTQ expr
   68     | expr . LT expr
   69     | expr . LTQ expr
   70     | expr . NEQ expr
   71     | expr . EQU expr
   72     | NOT expr .

    $default  reduce using rule 72 (expr)


State 87

   59 expr: expr . ADD expr
   60     | expr . MIN expr
   61     | expr . MUL expr
   62     | expr . DIV expr
   63     | expr . MOD expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . GT expr
   67     | expr . GTQ expr
   68     | expr . LT expr
   69     | expr . LTQ expr
   70     | expr . NEQ expr
   71     | expr . EQU expr
   73     | ADD expr .

    MUL  shift, and go to state 91
    DIV  shift, and go to state 92
    MOD  shift, and go to state 93

    $default  reduce using rule 73 (expr)


State 88

   59 expr: expr . ADD expr
   60     | expr . MIN expr
   61     | expr . MUL expr
   62     | expr . DIV expr
   63     | expr . MOD expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . GT expr
   67     | expr . GTQ expr
   68     | expr . LT expr
   69     | expr . LTQ expr
   70     | expr . NEQ expr
   71     | expr . EQU expr
   74     | MIN expr .

    MUL  shift, and go to state 91
    DIV  shift, and go to state 92
    MOD  shift, and go to state 93

    $default  reduce using rule 74 (expr)


State 89

   59 expr: expr ADD . expr

    REF      shift, and go to state 47
    NOT      shift, and go to state 48
    ADD      shift, and go to state 49
    MIN      shift, and go to state 50
    ID       shift, and go to state 51
    INTEGER  shift, and go to state 52
    CHAR     shift, and go to state 53
    STRING   shift, and go to state 54

    expr  go to state 115


State 90

   60 expr: expr MIN . expr
